# Papercards

./: .gitignore  CMakeLists.txt  Papercards.pro  Papercards.pro.qtds  README.md  default_deck.json
config/: config.qrc  default_card.json
frameworks/: MacOSXBundleInfo.plist.in  papercards.desktop.in
gui/: CardView.qml  DialogAbout.qml  DialogConfirmDiscard.qml  EditorContent.qml  EditorStatusBar.qml  EditorToolBar.qml  Test.qml  gui.qrc  main.qml  qtquickcontrols2.conf
gui/components/: ColorPicker.qml  DefaultMenuBar.qml  ErrorMessage.qml  MaterialToolButton.qml  MoveableScrollView.qml  NativeMenuBar.qml  RobotoFontLoader.qml  TextAreaErrorField.qml
qml/: main.qml  qml.qrc
qml/components/: EditorToolbar.qml
res/: res.qrc  stylesheet.qss
resources/: MacOSXBundleInfo.plist.in  default_card.json  default_deck.json  logo.psd  qtquickcontrols2.conf  res.qrc  resources.qrc
resources/PaperCardsStyle/: ApplicationWindow.qml  Slider.qml  SliderHandle.qml  ToolBar.qml  ToolButton.qml
resources/assets/: stylesheet.qss
resources/qml/: main.qml
resources/qml/basics/: ErrorIcon.qml  ErrorMessage.qml  Icon.qml  MaterialDesign.js  MaterialToolButton.qml  TextAreaErrorField.qml
resources/qml/components/: CardView.qml  DualCardView.qml  EditorStatusBar.qml  EditorToolBar.qml  EditorToolbar.qml  Icon.qml
src/: Backend.cpp  Backend.h  CMakeLists.txt  DocumentHandler.cpp  DocumentHandler.h  MainWindow.cpp  MainWindow.h  PdfHandler.cpp  PdfHandler.h  SidePanel.cpp  SidePanel.h  papercards_qml.cpp
src/app/: CMakeLists.txt
src/app/src/: papercards.cpp
src/app/src/controller/: Controller.cpp  Controller.h
src/app/src/model/: Card.cpp  Card.h  Field.cpp  Field.h  Model.cpp  Model.h
src/app/src/model/utility/: JsonParser.cpp  JsonParser.h
src/app/src/view/: ColorDefinitions.h  MainWindow.cpp  MainWindow.h  View.cpp  View.h  ViewContainer.cpp  ViewContainer.h
src/app/src/view/base/: ScalableLineEdit.cpp  ScalableLineEdit.h  ScalableMediaEdit.cpp  ScalableMediaEdit.h  ScalableTextEdit.cpp  ScalableTextEdit.h  ScalableVBoxLayout.cpp  ScalableVBoxLayout.h  StatusBar.cpp  StatusBar.h
src/app/src/view/card/: CardEditor.cpp  CardEditor.h  CardEditorBackground.cpp  CardEditorBackground.h  CardEditorToolBar.cpp  CardEditorToolBar.h  CardEditorToolbar.cpp  CardEditorToolbar.h  CardView.cpp  CardView.h  DualCardView.cpp  DualCardView.h
src/app_qml/: CMakeLists.txt
src/app_qml/src/: Backend.cpp  Backend.h  papercards_qml.cpp
src/app_qml/src/model/: Card.cpp  Card.h
src/model/: Card.cpp  Card.h
src/old/: Backend.cpp  DocumentHandler.cpp  PdfHandler.h  QFontIcon.cpp  QFontIcon.h  material_icons.h
ui/: mainwindow.ui  sidepanel.ui  ui.qrc
uml/: model.puml  view.puml
